--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ h2 {
 }
 header {
     border: 5px solid red;
+    margin: 2px;
 }
 
 .class-list {
@@ -37,10 +38,17 @@ header {
     text-align: right;
 }
 
-ol li {
+ol li p {
     padding: 5px;
-    background-color: grey;
 }
+ol>li:nth-child(odd)>p{
+     background-color: grey;
+}
+
+ol li:nth-child(even) p {
+    background-color:greenyellow;
+}
+
 
 a:link {
     color: orange;
@@ -49,6 +57,6 @@ a:visited {
     color:green;
 }
 
-a:hover {
+a.codedev:hover {
     text-decoration: none;
 }
